[package]
name = "single-utilities"
version = "0.2.0"
edition = "2024"
description = "This crate provdes types, traits and utility functions to the single-rust ecosystem that can be universally used. You can also use it within your own ecosystem 👀"
homepage = "https://singlerust.com"
authors = ["Ian F. Diks"]
repository = "https://github.com/SingleRust/single-utilities"
license-file = "LICENSE.md"

[dependencies]
num-traits = "0.2.19"
