[package]
name = "single-utilities"
version = "0.9.0"
edition = "2024"
description = "This crate provdes types, traits and utility functions to the single-rust ecosystem that can be universally used. You can also use it within your own ecosystem 👀"
homepage = "https://singlerust.com"
authors = ["Ian F. Diks"]
repository = "https://github.com/SingleRust/single-utilities"
license-file = "LICENSE.md"

[features]
simd = ["dep:simba"]
convert = ["dep:ndarray", "dep:nalgebra"]

[dependencies]
num-traits = "0.2.19"
simba = { version = "0.9.1", optional = true }
anyhow = "1.0.100"
ndarray = { version = "0.16", optional = true }
nalgebra = { version = "0.34", optional = true }
